--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <span class="leesteken">Leesteken</span><br>
         <span class="lidwoord">Lidwoord</span><br>
         <span class="bijvoegelijk_naamwoord_bijwoord">Bijv. Naamwoord/Bijwoord</span><br>
-        <span class="persoonlijk_voornaamwoord">Pers. Voornaamwoord</span><br>
+		<span class="persoonlijk_voornaamwoord">Pers. Voornaamwoord</span><br>
+		<span class="bezittelijk_voornaamwoord">Bezittelijk Voornaamwoord</span><br>
         <span class="voorzetsel">Voorzetsel</span><br>
         <span class="koppelwerkwoord">Koppelwerkwoord</span><br>
         <span class="bijwoord">Bijwoord</span><br>
